add feature renderinpage edit complete and delete feature

--- a/todo_task/index.html
+++ b/todo_task/index.html
@@ -5,15 +5,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ToDo List</title>
         <link rel="stylesheet" href="style.css" />
+        <script src="./script.js"></script>
     </head>
     <body>
         <h1>ToDo List</h1>
         <div class="wrapper">
-            <input class="task" type="text" placeholder="task.." />
-            <ul>
-                <li>task 1</li>
-                <li>task 2</li>
-                <li>task 3</li>
+            <input class="task-input" type="text" placeholder="task.." />
+            <ul class="task-container">
+                <!-- <li class="task-list">
+                    task1
+                    <div class="buttons">
+                        <button class="edit">edit</button>
+                        <button class="complete">complete</button>
+                        <button class="delete">delete</button>
+                    </div>
+                </li>
+                <li class="task-list">task 2</li>
+                <li class="task-list">task 3</li> -->
             </ul>
         </div>
     </body>
