add feature all pending and compeleted task list

--- a/todo_task/index.html
+++ b/todo_task/index.html
@@ -11,6 +11,11 @@
         <h1>ToDo List</h1>
         <div class="wrapper">
             <input class="task-input" type="text" placeholder="task.." />
+            <div>
+                <button class="allBtn">All</button>
+                <button class="completedBtn">Completed</button>
+                <button class="pendingBtn">Pending</button>
+            </div>
             <ul class="task-container">
                 <!-- <li class="task-list">
                     task1
@@ -20,8 +25,22 @@
                         <button class="delete">delete</button>
                     </div>
                 </li>
-                <li class="task-list">task 2</li>
-                <li class="task-list">task 3</li> -->
+                <li class="task-list">
+                    task 2
+                    <div class="buttons">
+                        <button class="edit">edit</button>
+                        <button class="complete">complete</button>
+                        <button class="delete">delete</button>
+                    </div>
+                </li>
+                <li class="task-list">
+                    task 3
+                    <div class="buttons">
+                        <button class="edit">edit</button>
+                        <button class="complete">complete</button>
+                        <button class="delete">delete</button>
+                    </div>
+                </li> -->
             </ul>
         </div>
     </body>
