--- a/todo_task/index.html
+++ b/todo_task/index.html
@@ -3,44 +3,31 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>ToDo List</title>
+        <title>ToDo App</title>
         <link rel="stylesheet" href="style.css" />
         <script src="./script.js"></script>
     </head>
     <body>
-        <h1>ToDo List</h1>
+        <h1>
+            ToDo List <img src="./images/book-solid.svg" alt=""></span>
+        </h1>
         <div class="wrapper">
-            <input class="task-input" type="text" placeholder="task.." />
-            <div>
+            <input class="task-input" type="text" placeholder="add your task..." />
+            <div class="buttons-container">
                 <button class="allBtn">All</button>
                 <button class="completedBtn">Completed</button>
                 <button class="pendingBtn">Pending</button>
             </div>
             <ul class="task-container">
                 <!-- <li class="task-list">
-                    task1
+                    <p class="isCompleted">task1</p>
                     <div class="buttons">
-                        <button class="edit">edit</button>
-                        <button class="complete">complete</button>
-                        <button class="delete">delete</button>
-                    </div>
-                </li>
-                <li class="task-list">
-                    task 2
-                    <div class="buttons">
-                        <button class="edit">edit</button>
-                        <button class="complete">complete</button>
-                        <button class="delete">delete</button>
-                    </div>
-                </li>
-                <li class="task-list">
-                    task 3
-                    <div class="buttons">
-                        <button class="edit">edit</button>
-                        <button class="complete">complete</button>
-                        <button class="delete">delete</button>
+                        <button class="btn edit">edit</button>
+                        <button class="btn complete">complete</button>
+                        <button class="btn delete">delete</button>
                     </div>
                 </li> -->
+               
             </ul>
         </div>
     </body>
