add score and restart feat

--- a/ping_pong/index.html
+++ b/ping_pong/index.html
@@ -8,6 +8,7 @@
         <script src="./script.js"></script>
     </head>
     <body>
+        <h2 class="score">score :</h2>
         <div class="game-arena">
             <div class="ping-pong"></div>
             <div class="ball"></div>
