add upload external image file feature

--- a/tier_maker/index.html
+++ b/tier_maker/index.html
@@ -66,5 +66,15 @@
             <img src="./images/punjab.png" alt="punjab" title="punjab" />
             <img src="./images/odisha.jpg" alt="odisha" title="odisha" />
         </div>
+
+        <div class="upload-image-container wrapper">
+            <label for="upload-image">Upload Image from System</label>
+            <input
+                type="file"
+                id="upload-image"
+                accept="image/*"
+                style="display: none"
+            />
+        </div>
     </body>
 </html>
